align bar to top. fixes #13

--- a/app/styles/_bar.scss
+++ b/app/styles/_bar.scss
@@ -1,6 +1,7 @@
 .bar {
   margin-bottom: 60px;
   padding-bottom: 20px;
+  height: 58px;
   border-bottom: 2px solid $gray;
   transition: border ease .22s;
 
